# rsansible

./: .gitignore  ANSIBLE_COMPAT.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  RSANSIBLE_IDIOMS.md  TODO.md  TODO_DONE.md  agent-size-history.tsv  install.sh  justfile
.github/workflows/: ci.yml  release.yml
crates/agent/: Cargo.toml
crates/agent/src/: facts.rs  lib.rs  main.rs  writer.rs
crates/agent/src/modules/: apt.rs  async_job.rs  authorized_key.rs  blockinfile.rs  copy_target.rs  exec.rs  file.rs  gather_facts.rs  get_url.rs  getent.rs  group.rs  hostname.rs  iptables.rs  lineinfile.rs  mod.rs  postgresql.rs  read_file.rs  stat.rs  systemd.rs  timezone.rs  ufw.rs  unarchive.rs  uri.rs  user.rs  validate_helper.rs  wait_for.rs  write_file.rs
crates/agent/src/modules/package/: apt.rs  mod.rs  pip.rs
crates/agent/src/modules/repository/: apt.rs  mod.rs
crates/agent/tests/: smoke.rs
crates/ctl/: Cargo.toml
crates/ctl/examples/: forward_bc_smoke.rs  forward_smoke.rs
crates/ctl/src/: back_channel.rs  become_.rs  exec_ctx.rs  extra_vars.rs  forward.rs  forward_bundle.rs  forward_push.rs  host_pattern.rs  inventory.rs  lib.rs  limit.rs  local.rs  local_agent.rs  main.rs  orchestrator.rs  pool.rs  run_metrics.rs  ssh.rs  tags.rs  template.rs  timing.rs  vault.rs  wire_cost.rs  x509.rs
crates/ctl/src/playbook/: import.rs  mod.rs  role.rs  task_op.rs  validate.rs
crates/ctl/src/playbook/task_op/: authorized_key.rs  block.rs  blockinfile.rs  command.rs  copy.rs  exec.rs  file.rs  get_url.rs  getent.rs  group.rs  hostname.rs  iptables.rs  lineinfile.rs  mod.rs  openssl.rs  package.rs  postgresql.rs  repository.rs  shared.rs  shell.rs  slurp.rs  stat.rs  systemd.rs  tempfile.rs  template.rs  timezone.rs  ufw.rs  unarchive.rs  uri.rs  user.rs  wait_for.rs  write_file.rs
crates/ctl/tests/: apt_e2e.rs  become_e2e.rs  block_rescue_always_e2e.rs  blockinfile_e2e.rs  file_e2e.rs  groups_and_vars.rs  handlers_delegation.rs  ignore_errors_e2e.rs  limit_e2e.rs  lineinfile_e2e.rs  playbook_e2e.rs  postgresql_e2e.rs  profile_phases.rs  programming_model.rs  retries_until_delay_e2e.rs  roles_and_facts.rs  ssh_smoke.rs  stat_e2e.rs  systemd_e2e.rs  tags_e2e.rs  ufw_e2e.rs  uri_e2e.rs  wait_for_e2e.rs  x509_e2e.rs
crates/ctl/tests/common/: mod.rs  sshd.rs
crates/declarative-spike/: Cargo.toml
crates/declarative-spike/examples/: nginx.rs  postgres.rs  postgres_with_roles.rs
crates/declarative-spike/src/: lib.rs
crates/wire/: Cargo.toml
crates/wire-runtime/: Cargo.toml
crates/wire-runtime/src/: bitstream.rs  lib.rs
crates/wire/src/: framing.rs  generated.rs  lib.rs  msg.rs
docs/: book.toml
docs/src/: SUMMARY.md  install.md  introduction.md  quickstart.md
docs/src/internals/: dirac-design.md
docs/src/reference/: compat.md  idioms.md
examples/: apt.yaml  become.yaml  blockinfile.yaml  file.yaml  groups_and_vars.inventory.yml  groups_and_vars.yaml  handlers_and_delegation.yaml  hello.inventory.yaml  hello.yaml  lineinfile.yaml  postgresql.yaml  programming_model.yaml  programming_model_imports.yaml  roles_and_facts.inventory.yml  roles_and_facts.yaml  stat.yaml  systemd.yaml  ufw.yaml  uri.yaml  wait_for.yaml  x509.yaml
examples/group_vars/all/: main.yml
examples/group_vars/web/: main.yml  secrets.yml
examples/host_vars/: host1.yml
examples/roles/web/defaults/: main.yml
examples/roles/web/files/: static-asset.txt
examples/roles/web/handlers/: main.yml
examples/roles/web/tasks/: extra.yml  install.yml  main.yml
examples/roles/web/templates/: web.conf.j2
schema/: wire.schema.json5
scripts/: record-agent-size.sh
