[package]
name = "rsansible-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "rsansible agent — pushed to a host, executes ops, deletes itself."

[[bin]]
name = "rsansible-agent"
path = "src/main.rs"

[dependencies]
rsansible-wire.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
sha2.workspace = true
# regex — OpLineInFile / OpBlockInFile match the user-supplied pattern
# inside the agent. Rust regex syntax is close enough to Ansible's
# Python re for the cases gothab uses.
regex = { workspace = true }

# rustix for getuid/getgid/uname without dropping `forbid(unsafe_code)` and
# without dragging in libc-link headaches on musl.
rustix = { version = "0.38", default-features = false, features = ["process", "system", "std"] }

# reqwest with rustls (no OpenSSL) powers OpUri. `json` exposes the
# response-body parser; `gzip` is needed because Patroni's REST API
# returns gzipped responses. Default features stripped so we don't drag
# in OpenSSL via the default `native-tls` feature.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "process", "io-util", "fs"] }
# Pin axum/hyper/tower for the OpUri unit-test HTTP server.
axum = "0.7"
hyper = "1"
tower = "0.5"
