[package]
name = "rsansible-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "rsansible agent — pushed to a host, executes ops, deletes itself."

[[bin]]
name = "rsansible-agent"
path = "src/main.rs"

[dependencies]
rsansible-wire.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
sha2.workspace = true
# regex — OpLineInFile / OpBlockInFile match the user-supplied pattern
# inside the agent. Rust regex syntax is close enough to Ansible's
# Python re for the cases gothab uses.
regex = { workspace = true }

# rustix for getuid/getgid/uname without dropping `forbid(unsafe_code)` and
# without dragging in libc-link headaches on musl.
rustix = { version = "0.38", default-features = false, features = ["process", "system", "std"] }

# reqwest with rustls (no OpenSSL) powers OpUri. `json` exposes the
# response-body parser; `gzip` is needed because Patroni's REST API
# returns gzipped responses. Default features stripped so we don't drag
# in OpenSSL via the default `native-tls` feature.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }

# tokio-postgres is the async PostgreSQL client for OpPostgresqlQuery
# and OpPostgresqlExt. Pure Rust (no libpq), works with musl. Default
# features are fine — we don't need any of the TLS backends since
# Patroni clusters and our integration tests run on UNIX socket or
# plaintext TCP. `with-serde_json-1` enables tokio_postgres::types::Json
# bridging if we ever need it; harmless until then.
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
# base64 for bytea column serialization in postgresql query results.
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "process", "io-util", "fs"] }
# Pin axum/hyper/tower for the OpUri unit-test HTTP server.
axum = "0.7"
hyper = "1"
tower = "0.5"
# mTLS integration test: axum-server provides a rustls-backed TCP
# acceptor that can demand client certs; rcgen generates the CA +
# server + client cert chain in-test; rustls is the server-side TLS
# implementation. These are dev-deps only — they never ship with the
# pushed agent binary.
axum-server = { version = "0.7", features = ["tls-rustls"] }
rcgen = { version = "0.13", default-features = false, features = ["pem", "crypto", "aws_lc_rs"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
# Test-only PEM → DER decoding for handing certs to rustls 0.23.
# rcgen emits canonical PEM so a tiny grep-then-base64 helper is plenty;
# avoids dragging in `rustls-pemfile` just for the dev path.
base64 = "0.22"
