[package]
name = "rsansible-ctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "rsansible controller — orchestrates agents over SSH."

[lib]
name = "rsansible_ctl"
path = "src/lib.rs"

[[bin]]
name = "rsansible"
path = "src/main.rs"

[dependencies]
rsansible-wire.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
futures.workspace = true
russh.workspace = true
minijinja.workspace = true
clap.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
aes.workspace = true
ctr.workspace = true
pbkdf2.workspace = true
hmac.workspace = true
sha2.workspace = true
subtle.workspace = true
hex.workspace = true
base64.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile = "3"
