[package]
name = "rsansible-ctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "rsansible controller — orchestrates agents over SSH."

[lib]
name = "rsansible_ctl"
path = "src/lib.rs"

[[bin]]
name = "rsansible"
path = "src/main.rs"

[dependencies]
rsansible-wire.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
futures.workspace = true
russh.workspace = true
minijinja.workspace = true
minijinja-contrib.workspace = true
clap.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
aes.workspace = true
ctr.workspace = true
pbkdf2.workspace = true
hmac.workspace = true
sha2.workspace = true
subtle.workspace = true
hex.workspace = true
base64.workspace = true
regex.workspace = true
# Controller-side x509: generates private keys, CSRs, and self-signed
# certificates locally so the bytes can ship via OpWriteFile (or via
# `register: .content` for the *_pipe variants). Pulled in on the
# controller only — keeps the pushed agent binary small.
# aws_lc_rs (not ring) is required for RSA keygen — ring intentionally
# doesn't ship an RSA generator (briansmith/ring#219), and
# `openssl_privatekey` defaults to RSA-4096 in Ansible-land. aws-lc-sys
# links a copy of AWS's libcrypto; this is fine on the controller (it
# only ships to operator workstations), and never touches the agent.
# x509-parser is needed by `CertificateSigningRequestParams::from_pem`
# so cert_pipe can lift the CSR's subject/SANs/extensions into the
# signed cert.
rcgen = { version = "0.13", default-features = false, features = ["pem", "crypto", "aws_lc_rs", "x509-parser"] }
# rcgen's CertificateParams takes `OffsetDateTime` for cert validity
# windows. `time` is already in our dep graph (transitive via rcgen
# and hyper); pinning explicitly keeps the API visible without
# version-skew surprises.
time = { version = "0.3", default-features = false, features = ["std"] }
shlex = "1.3.0"
# `tempfile` is used by the controller-side `tempfile:` op to create
# temp files/directories with a known prefix/suffix. We don't lean on
# the drop-cleanup behavior — `tempfile:` matches Ansible's contract
# of leaving the temp object on disk for downstream tasks to consume.
tempfile = "3"
rand = "0.9.4"

[dev-dependencies]
# Enable tokio's `test-util` so unit tests can `tokio::time::pause()` /
# `advance()` to verify retry-loop delays without wall-clock sleeps.
tokio = { workspace = true, features = ["test-util"] }
